--- a/accounting/templates/accounting/includes/account-app/media-simple.html
+++ b/accounting/templates/accounting/includes/account-app/media-simple.html
@@ -2,7 +2,7 @@
 <div class="media">
   <a href="{{account.get_absolute_url}}">
 
-    <img src="{{account.logo}}" width="72" alt="">
+    <img src="{{account.thumbnail}}" width="72" alt="">
   </a>
   <div class="media-body mr-2">
     <div>
