--- a/accounting/templates/accounting/includes/bank-account-app/card.html
+++ b/accounting/templates/accounting/includes/bank-account-app/card.html
@@ -14,7 +14,7 @@
 
         <div class="text-center">
 
-            <img src="{{account.logo}}" width="64" alt="">
+            <img src="{{account.thumbnail}}" width="64" alt="">
         </div>
 
         <h5 class="text-center mt-2">
