--- a/accounting/templates/accounting/includes/financial-document-lines-app/template.html
+++ b/accounting/templates/accounting/includes/financial-document-lines-app/template.html
@@ -116,7 +116,7 @@
                     <a :href="financial_document_line.account.get_absolute_url">
                       <div class="media">
                         <img
-                          :src="financial_document_line.account.logo"
+                          :src="financial_document_line.account.thumbnail"
                           width="32"
                           alt=""
                         />
