--- a/accounting/templates/accounting/includes/invoice-line-item-units-app/template.html
+++ b/accounting/templates/accounting/includes/invoice-line-item-units-app/template.html
@@ -72,7 +72,7 @@
                   <div class="media">
                     <a :href="invoice_line_item_unit.invoice_line_item.get_absolute_url">
                       <img
-                        :src="invoice_line_item_unit.invoice_line_item.logo"
+                        :src="invoice_line_item_unit.invoice_line_item.thumbnail"
                         class="rounded"
                         width="32"
                         alt=""
