--- a/accounting/templates/accounting/includes/person-categories-app/template.html
+++ b/accounting/templates/accounting/includes/person-categories-app/template.html
@@ -61,7 +61,7 @@
                                 <td>
                                     <div class="media">
                                         <a :href="person_category.account.get_absolute_url">
-                                            <img :src="person_category.account.logo" class="rounded" width="32" alt="">
+                                            <img :src="person_category.account.thumbnail" class="rounded" width="32" alt="">
                                         </a>
                                         <div class="media-body mr-3">
                                             <div>
