--- a/accounting/templates/accounting/includes/product-specifications-app/template.html
+++ b/accounting/templates/accounting/includes/product-specifications-app/template.html
@@ -85,7 +85,7 @@
 
                                     <div class="media">
                                         <a :href="product_specification.product.get_absolute_url">
-                                            <img :src="product_specification.product.logo" class="rounded" width="32"
+                                            <img :src="product_specification.product.thumbnail" class="rounded" width="32"
                                                 alt="">
                                         </a>
                                         <div class="media-body mr-3">
