--- a/organization/templates/organization/includes/add-employee-app/template.html
+++ b/organization/templates/organization/includes/add-employee-app/template.html
@@ -71,7 +71,7 @@
                 <div class="col-6 mt-3">
                   <a :href="person.get_absolute_url" v-if="person">
                     <div class="media">
-                      <img :src="person.logo" width="64" alt="" />
+                      <img :src="person.thumbnail" width="64" alt="" />
                       <div class="mr-2 media-body">
                         <h5 class="my-2">
                           <span
