--- a/organization/templates/organization/includes/add-organization-unit-app/template.html
+++ b/organization/templates/organization/includes/add-organization-unit-app/template.html
@@ -51,9 +51,9 @@
                 </div>
 
                 <div class="col-6 mt-3">
-                  <a :href="person_account.get_absolute_url" v-if="person_account.logo">
+                  <a :href="person_account.get_absolute_url" v-if="person_account.thumbnail">
                     <div class="media">
-                      <img :src="person_account.logo" width="64" alt="" />
+                      <img :src="person_account.thumbnail" width="64" alt="" />
                       <div class="mr-2 media-body">
                         <h5 class="my-2">
                           <span
