--- a/transport/templates/transport/includes/add-service-man-app/template.html
+++ b/transport/templates/transport/includes/add-service-man-app/template.html
@@ -52,7 +52,7 @@
               <hr />
               <a :href="person_account.get_absolute_url" v-if="person_account.name">
                 <div class="media">
-                  <img :src="person_account.logo" width="64" alt="" />
+                  <img :src="person_account.thumbnail" width="64" alt="" />
                   <div class="mr-2 media-body">
                     <h5 class="my-2">
                       <span v-text="person_account.name"></span>
