--- a/transport/templates/transport/includes/service-mans-app/template.html
+++ b/transport/templates/transport/includes/service-mans-app/template.html
@@ -49,7 +49,7 @@
 
                   <div class="media">
                     <a :href="service_man.person_account.get_absolute_url">
-                      <img :src="service_man.person_account.logo" width="48" class="rounded-circle" alt="">
+                      <img :src="service_man.person_account.thumbnail" width="48" class="rounded-circle" alt="">
                     </a>
                     <div class="media-body mr-2">
                       <a :href="service_man.person_account.get_absolute_url">
