--- a/accounting/templates/accounting/includes/set-account-parent-app/template.html
+++ b/accounting/templates/accounting/includes/set-account-parent-app/template.html
@@ -26,7 +26,7 @@
                 </form>
                 <a :href="parent.get_absolute_url" v-if="parent.name">
                     <div class="media">
-                        <img :src="parent.logo" width="64" alt="">
+                        <img :src="parent.thumbnail" width="64" alt="">
                         <div class="mr-2 media-body">
                             <h5 class="my-2">
                                 <span :class="'text-'+parent.color" v-text="parent.name"></span>
