--- a/projectmanager/templates/projectmanager/includes/project-app/card.html
+++ b/projectmanager/templates/projectmanager/includes/project-app/card.html
@@ -1,4 +1,6 @@
 {% load to_price %}
+{% load to_persian_date %}
+{% load static %}
 
 <div class="card">
   <div class="card-header">
@@ -6,14 +8,23 @@
     <h5>{{project.title}}</h5>
   </div>
   <div class="card-body">
-    <h5>{{project.title}}</h5>
+<div class="text-center">
+  <img src="{{project.thumbnail}}" width="128" alt="">
+</div>
+    <h5 class="text-center">{{project.title}}</h5>
+    <div class="text-center">
+  <img src="{{project.get_qrcode_url}}" width="128" alt="">
+</div>
 
-    <div class="btn btn-primary my-2">
+<div class="text-center">
 
-        <h5>برآورد : {{project.amount|to_price}} {{CURRENCY}}</h5>
-    </div>
-
-        {% include "core/includes/page-app/card-contents.html" %}
+  <div class="btn btn-primary my-2">
+    
+    <h5>برآورد : {{project.amount|to_price}} {{CURRENCY}}</h5>
+  </div>
+</div>
+  
+     
         
 <hr>
     <div class="my-2">
@@ -84,5 +95,46 @@
         >نمودار گانت</a
       >
     </div>
+
+    
+<div>
+  <h6>
+  <small class="text-muted">
+    تاریخ ایجاد
+  </small>
+  
+
+  {{page.date_added|to_persian_datetime|safe}}
+</h6>
+</div>
+<div>{% include "attachments/includes/page-like-app/template.html" %}</div>
+<div class="my-3">
+  <form action="https://www.google.com/search" method="get" target="_blank" id="search-form">
+    <input name="q" type="hidden" value="{{page.title}}" />
+    <button type="submit" class="btn btn-link p-0">
+      <img src="{% static 'img/icons/google.png' %}" width="32" alt="" />
+
+      جستجوی گوگل
+    </button>
+  </form>
+</div>
+
+<div>
+  {% if perms.core.change_page %}
+  <a href="{{page.get_edit_url}}" class="my-2 text-warning mx-2" title="ویرایش" target="_blank">
+    <i class="fa fa-edit text-warning"></i>
+    ویرایش
+  </a>
+  {% endif %} {% if perms.core.delete_page %}
+
+  <a href="{{page.get_delete_url}}" class="my-2 text-danger mx-2" title="حذف" target="_blank">
+    <i class="fa fa-trash text-danger"></i>
+    حذف
+  </a>
+  {% endif %}
+</div>
+<div class="my-2">
+  {% include 'core/includes/page-priority-app/template.html' %}
+</div>
   </div>
 </div>
