--- a/projectmanager/templates/projectmanager/includes/project-app/script.html
+++ b/projectmanager/templates/projectmanager/includes/project-app/script.html
@@ -17,9 +17,9 @@
         
         if(typeof add_invoice_app != 'undefined'){
             add_invoice_app.bestankar_code= "{{project.employer.person_account.code}}"
-            add_invoice_app.bestankar = {code:"{{project.employer.person_account.code}}",get_absolute_url:"{{project.employer.person_account.get_absolute_url}}",color:"{{project.employer.person_account.color}}",balance:to_price_colored("{{project.employer.person_account.balance}}"),name:"{{project.employer.person_account.name}}",logo:"{{project.employer.person_account.logo}}"}
+            add_invoice_app.bestankar = {code:"{{project.employer.person_account.code}}",get_absolute_url:"{{project.employer.person_account.get_absolute_url}}",color:"{{project.employer.person_account.color}}",balance:to_price_colored("{{project.employer.person_account.balance}}"),name:"{{project.employer.person_account.name}}",thumbnail:"{{project.employer.person_account.thumbnail}}"}
             add_invoice_app.bedehkar_code= "{{project.contractor.person_account.code}}"
-            add_invoice_app.bedehkar = {code:"{{project.employer.person_account.code}}",get_absolute_url:"{{project.contractor.person_account.get_absolute_url}}",color:"{{project.contractor.person_account.color}}",balance:to_price_colored("{{project.contractor.person_account.balance}}"),name:"{{project.contractor.person_account.name}}",logo:"{{project.contractor.person_account.logo}}"}
+            add_invoice_app.bedehkar = {code:"{{project.employer.person_account.code}}",get_absolute_url:"{{project.contractor.person_account.get_absolute_url}}",color:"{{project.contractor.person_account.color}}",balance:to_price_colored("{{project.contractor.person_account.balance}}"),name:"{{project.contractor.person_account.name}}",thumbnail:"{{project.contractor.person_account.thumbnail}}"}
         }
     })
 </script>
