--- a/projectmanager/templates/projectmanager/includes/project-edit-app/template.html
+++ b/projectmanager/templates/projectmanager/includes/project-edit-app/template.html
@@ -194,7 +194,7 @@
               /> 
               <button
                 v-if="!waiting"
-                class="btn btn-outline-success btn-block"
+                class="btn btn-success btn-block"
                 type="submit"
               >
                 <i class="material-icons"> check_circle_outline </i>
