--- a/projectmanager/templates/projectmanager/project.html
+++ b/projectmanager/templates/projectmanager/project.html
@@ -5,7 +5,6 @@
 <div class="row rtl">
   <div class="col-md-3"> 
     {% include "projectmanager/includes/project-app/card.html" %} 
-    {% include "core/includes/page-thumbnail-header-app/template.html" %}
   </div>
   <div class="col-md-9">
     <div class="row rtl">
@@ -18,40 +17,39 @@
       <div class="col-md-12">
         {% include "attachments/includes/images-app/template.html" %}
       </div>
-
       <div class="col-md-4">
         {% include "attachments/includes/links-app/template.html" %}
       </div>
-
       <div class="col-md-4">
         {% include "attachments/includes/downloads-app/template.html" %}
       </div>
       <div class="col-md-4">
         {% include "attachments/includes/tags-app/template.html" %}
       </div>
-
+      <div class="col-md-12">
+          {% include "core/includes/page-thumbnail-header-app/template.html" %}
+      </div>
+      <div class="col-md-12">
+          {% include "core/includes/page-description-app/short-description.html" %}
+          {% include "core/includes/page-description-app/description.html" %}
+      </div>
       <div class="col-md-12">
         {% include "attachments/includes/locations-app/template.html" %}
       </div>
-
       {% if add_invoice_form %}
       <div class="col-md-12">
         {% include "projectmanager/includes/add-invoice-app/template.html" %}
       </div>
       {% endif %}
-
       <div class="col-md-12">
         {% include "accounting/includes/invoices-app/template.html" %}
       </div>
-
       <div class="col-md-12">
         {% include "accounting/includes/invoice-lines-app/template.html" %}
       </div>
-
       <div class="col-md-12">
         {% include "projectmanager/includes/project-edit-app/template.html" %}
       </div>
-
       <div class="col-md-12">
         {% include "projectmanager/includes/remote-clients-app/template.html" %}
       </div>
