--- a/school/templates/school/includes/add-school-app/template.html
+++ b/school/templates/school/includes/add-school-app/template.html
@@ -56,7 +56,7 @@
                     v-if="person_account.id"
                   >
                     <div class="media">
-                      <img :src="person_account.logo" width="64" alt="" />
+                      <img :src="person_account.thumbnail" width="64" alt="" />
                       <div class="mr-2 media-body">
                         <h5 class="my-2">
                           <span
