--- a/transport/templates/transport/includes/add-vehicle-app/template.html
+++ b/transport/templates/transport/includes/add-vehicle-app/template.html
@@ -52,7 +52,7 @@
               <hr />
               <a :href="owner.get_absolute_url" v-if="owner.name">
                 <div class="media">
-                  <img :src="owner.logo" width="64" alt="" />
+                  <img :src="owner.thumbnail" width="64" alt="" />
                   <div class="mr-2 media-body">
                     <h5 class="my-2">
                       <span v-text="owner.name"></span>
