--- a/transport/templates/transport/includes/vehicles-app/template.html
+++ b/transport/templates/transport/includes/vehicles-app/template.html
@@ -51,7 +51,7 @@
                 <td>
                   <div class="media">
                     <a :href="vehicle.owner.get_absolute_url">
-                      <img :src="vehicle.owner.logo" width="48" class="rounded-circle" alt="">
+                      <img :src="vehicle.owner.thumbnail" width="48" class="rounded-circle" alt="">
                     </a>
                     <div class="media-body mr-2">
                       <a :href="vehicle.owner.get_absolute_url">
