--- a/accounting/templates/accounting/invoice-edit.html
+++ b/accounting/templates/accounting/invoice-edit.html
@@ -14,7 +14,8 @@
         </div>
       </div>
     </div>
-
+  </div>
+  <div class="col-md-12">
     <div class="card">
       <div class="card-body">
         <div class="row rtl">
@@ -89,8 +90,10 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="card">
+    </div>  
+  </div> 
+  <div class="col-md-12">
+     <div class="card">
       <div class="card-body">
         <table class="table table-striped">
           <thead>
@@ -137,7 +140,20 @@
                   v-model="invoice_line.unit_price"
                 />
                 <label for="">
-                  <span v-text="to_price(invoice_line.unit_price)"></span>
+                  <div v-if="invoice_line.discount_percentage==0">
+                    <span v-text="to_price(invoice_line.unit_price)"></span>
+                                   
+              
+                  </div>
+
+                  
+                  <div v-if="invoice_line.discount_percentage>0">
+                    <span  style="text-decoration: line-through;" v-text="to_price(invoice_line.unit_price)"></span>
+                                   
+                  <span class="mr-2"  v-text="to_price(invoice_line.unit_price*(100-invoice_line.discount_percentage)/100)"></span>
+              
+                  </div>
+                  
                 </label>
               </td>
 
@@ -149,28 +165,54 @@
                   class="form-control"
                   v-model="invoice_line.discount_percentage"
                 />
+                <div v-if="invoice_line.discount_percentage>0">
+                  <span v-text="to_price(invoice_line.unit_price*invoice_line.quantity*(invoice_line.discount_percentage)/100)"></span>
+                </div>
               </td>
-
+              
               <td>
-                <span
-                  v-text="to_price(invoice_line.unit_price*invoice_line.quantity)"
-                ></span>
+                <span v-text="to_price(invoice_line.unit_price*invoice_line.quantity*(100-invoice_line.discount_percentage)/100)"></span>
+               
                 {{CURRENCY}}
               </td>
             </tr>
+            <tr>
+              <td></td>
+              <td>جمع </td>
+              <td></td>
+              <td></td>
+              <td>
+                <div v-if="sum_discounts()>0">
+
+                  <span  v-text="to_price(sum_discounts())"></span>
+                  {{CURRENCY}}
+                </div>
+              </td>
+              <td>
+                <span v-text="to_price(sum_prices())"></span>
+                {{CURRENCY}}
+              </td>
+            </tr>
+
+              
+
           </tbody>
+          
         </table>
       </div>
     </div>
+  </div>
+      
+  <div class="col-md-12">
     <div class="card">
       <div class="card-body">
         <div class="row rtl">
 
-       <div class="col-md-4">
-         <button v-if="!waiting" class="btn btn-success" @click="save()">ذخیره</button>
-         <img  v-if="waiting" src="{% static 'leo/img/loading.gif' %}" width="48" alt="">
+      <div class="col-md-4">
+        <button v-if="!waiting" class="btn btn-success" @click="save()">ذخیره</button>
+        <img  v-if="waiting" src="{% static 'leo/img/loading.gif' %}" width="48" alt="">
           
-         <div>
+        <div>
 
               <a
           target="_blank"
@@ -183,9 +225,9 @@
           href="{% url 'accounting:invoice_print' pk=invoice.pk  %}"
           class="btn btn-link mx-2"
           >چاپ</a>
-         </div>
+        </div>
     
-       </div>
+      </div>
 
         <div class="col-md-8">
           <div v-if="message.show" class="my-2">
@@ -199,104 +241,19 @@
 
       </div>
     </div>
-  </div>
+  </div> 
+
 </div>
+ <div class="row">
+  
+  {% if add_invoice_line_form %}
+  <div class="col-md-12">
+    {% include "accounting/includes/add-invoice-line-app/template.html" %}
+  </div>
+  {% endif %}
+ </div>
 {% endblock content %} {% block script %}
 <script></script>
-{% include "accounting/includes/invoice-app/script.html" %}
-<script>
-  let bestankar = JSON.parse("{{bestankar_s|escapejs}}");
-  let bedehkar = JSON.parse("{{bedehkar_s|escapejs}}");
-  let invoice_lines = JSON.parse("{{invoice_lines_s|escapejs}}");
-  let invoice_edit_app = new Vue({
-    el: "#invoice-edit-app",
-    data: {
-      bestankar: bestankar,
-      bedehkar: bedehkar,
-      bestankar_code: bestankar.code,
-      bedehkar_code: bedehkar.code,
-      title: "{{invoice.title}}",
-      invoice_lines: invoice_lines,
-      message: { show: false },
-      waiting: false,
-    },
-    methods: {
-      to_price: (price) => to_price(price),
-      select_bedehkar: function () {
-        select_account_by_code(invoice_edit_app.bedehkar_code).done((data) => {
-          console.log(data);
-          if (data.result === "SUCCEED") {
-            invoice_edit_app.bedehkar = data.account;
-          } else {
-            invoice_edit_app.bedehkar = {};
-          }
-        });
-      },
+{% include "accounting/includes/invoice-app/edit-script.html" %}
 
-      select_bestankar: function () {
-        select_account_by_code(invoice_edit_app.bestankar_code).done((data) => {
-          console.log(data);
-
-          if (data.result === "SUCCEED") {
-            invoice_edit_app.bestankar = data.account;
-          } else {
-            invoice_edit_app.bestankar = {};
-          }
-        });
-      },
-      save: function () {
-        invoice_edit_app.waiting = true;
-        invoice_lines = [];
-        invoice_edit_app.invoice_lines.forEach((invoice_line) => {
-          invoice_lines.push({
-            row: parseInt(invoice_line.row),
-            invoice_line_id: parseInt(invoice_line.id),
-            quantity: parseInt(invoice_line.quantity),
-            unit_name: invoice_line.unit_name,
-            unit_price: parseInt(invoice_line.unit_price),
-            discount_percentage: parseInt(invoice_line.discount_percentage),
-          });
-        });
-        console.log(invoice_lines);
-
-        invoice_lines = JSON.stringify(invoice_lines);
-        let payload = {
-          csrfmiddlewaretoken: csrfmiddlewaretoken,
-          invoice_lines: invoice_lines,
-          invoice_id: invoice_id,
-          financial_event_id: invoice_id,
-          bedehkar_id: invoice_edit_app.bedehkar.id,
-          bestankar_id: invoice_edit_app.bestankar.id,
-          title: invoice_edit_app.title,
-        };
-        console.log(payload);
-        let url = `{% url 'accounting:invoice_edit' pk=invoice.id %}`;
-        $.post(url, payload).done((data) => {
-          console.log(data);
-          invoice_edit_app.waiting = false;
-          if (data.result === "SUCCEED") {
-            show_message(
-              invoice_edit_app,
-              "موفق",
-              data.message,
-              "success",
-              5000
-            );
-          }
-
-          if (data.result != "SUCCEED") {
-            show_message(
-              invoice_edit_app,
-              "خطا",
-              data.message,
-              "danger",
-              5000
-            );
-          }
-
-        });
-      },
-    },
-  });
-</script>
 {% endblock script %}
