--- a/attachments/templates/attachments/includes/locations-app/footer.html
+++ b/attachments/templates/attachments/includes/locations-app/footer.html
@@ -10,7 +10,7 @@
 
     <div v-if="show_add_location_form">
 
-        {% if add_page_location_form and all_locations %}
+        {% if add_location_form and page %}
         {% include "attachments/includes/locations-app/add-page-location-form.html" %}
         {% endif %}
 
