--- a/tax/templates/tax/includes/taxes-app/template.html
+++ b/tax/templates/tax/includes/taxes-app/template.html
@@ -9,7 +9,7 @@
           aria-expanded="true"
           aria-controls="collapse-schools"
         >
-          آموزشگاه ها
+          پرونده های مالیاتی
           <span v-if="schools.length>0">
             <small class="text-danger mx-2">
               <span v-text="schools.length"></span>
