--- a/tax/templates/tax/index.html
+++ b/tax/templates/tax/index.html
@@ -4,9 +4,9 @@
 {% block content %}
 <div class="row rtl farsi">
   <div class="col-6 col-md-3 col-lg-2 text-center my-3">
-    <a href="{% url 'school:taxes' %}">
+    <a href="{% url 'tax:taxes' %}">
       <img
-        src="{% static 'school/img/logo.png' %}"
+        src="{% static 'tax/img/logo.png' %}"
         width="64em"
         class="mb-2"
         alt=""
