print app for page

--- a/accounting/templates/accounting/includes/invoice-app/print-script.html
+++ b/accounting/templates/accounting/includes/invoice-app/print-script.html
@@ -1,34 +1,9 @@
 <script>
-    let invoice_print_app=new Vue({
-        el:"#invoice-print-app",
-        data:{
-            printing:false,
-        },
-        methods:{
-            print:function(){
-                console.log("print print print print print print print print print print")
-
-                 let url = "{% url 'accounting:print_financial_event' %}"
-                let payload = {
-                    csrfmiddlewaretoken: csrfmiddlewaretoken,
-                    transaction_id: parseInt("{{financial_event.id}}")
-                }
-                $.post(url, payload).done(data => {
-
-                })
-
-                this.printing = true
-                setTimeout(() => { 
-                    window.print()
-                }, 200);
-
-
-                setTimeout(() => {
-                    invoice_print_app.printing = false
-                }, 5000);
-
-
-            },
-        }
-    })
+    let invoice=JSON.parse("{{invoice_s|escapejs}}")
+    let invoice_id=parseInt("{{invoice.id}}")
 </script>
+
+{% include "accounting/includes/financial-event-app/print-script.html" %}
+
+ 
+{% include "accounting/includes/invoice-lines-app/script.html" %}
