--- a/accounting/templates/accounting/invoice-official-print.html
+++ b/accounting/templates/accounting/invoice-official-print.html
@@ -174,5 +174,5 @@
 {% endblock content %} {% block script %}
  
 
-{% include "accounting/includes/invoice-app/print-script.html" %} 
-{% include "accounting/includes/invoice-lines-app/script.html" %} {% include "accounting/includes/invoice-app/script.html" %} {% endblock script %}
+{% include "accounting/includes/invoice-app/print-script.html" %}  
+ {% endblock script %}
