--- a/accounting/templates/accounting/invoice-print.html
+++ b/accounting/templates/accounting/invoice-print.html
@@ -96,7 +96,7 @@
     </div>
   </div>
   <div class="col-12 rtl text-right">
-      {% include "accounting/includes/invoice-app/print-template.html" %}
+      {% include "attachments/includes/page-prints-app/template.html" %}
 
 
   </div>
@@ -104,6 +104,15 @@
 {% endblock content %} {% block script %}
 <script></script>
 {% include "accounting/includes/invoice-app/print-script.html" %}
+ 
 
-{% include "accounting/includes/invoice-lines-app/script.html" %}
- {% include "accounting/includes/invoice-app/script.html" %} {% endblock script %}
+
+
+
+
+
+ 
+ 
+ 
+ 
+ {% endblock script %}
