--- a/accounting/templates/accounting/invoice.html
+++ b/accounting/templates/accounting/invoice.html
@@ -70,6 +70,11 @@
       <div class="col-md-12">
         {% include "attachments/includes/images-app/template.html" %}
       </div>
+
+        <div class="col-12 rtl text-right">
+            {% include "attachments/includes/page-prints-app/template.html" %}
+        </div>
+  
     </div>
   </div>
 </div>
