--- a/core/templates/core/includes/page-app/script.html
+++ b/core/templates/core/includes/page-app/script.html
@@ -11,5 +11,6 @@
 {% include "attachments/includes/images-app/script.html" %}
 {% include "attachments/includes/downloads-app/script.html" %}
 {% include "attachments/includes/locations-app/script.html" %}
+{% include "attachments/includes/page-prints-app/script.html" %}
 {% include "core/includes/page-related-app/script.html" %}
 {% include "core/includes/page-priority-app/script.html" %}
