app for page print OK

--- a/accounting/templates/accounting/invoice-print.html
+++ b/accounting/templates/accounting/invoice-print.html
@@ -95,7 +95,7 @@
       </div>
     </div>
   </div>
-  <div class="col-12 rtl text-right">
+  <div class="col-12 ">
       {% include "attachments/includes/page-prints-app/template.html" %}
 
 
