--- a/accounting/templates/accounting/includes/add-invoice-app/template.html
+++ b/accounting/templates/accounting/includes/add-invoice-app/template.html
@@ -72,12 +72,12 @@
               </div>
             </div>
           </div>
-<div class="col-12">
-  <button class="my-2 btn btn-info" @click="swap()">
-    {% load static %}
-    <img width="32" src="{% static 'img/icons/exchange3.png' %}" alt="">
-  </button>
-</div>
+          <div class="col-md-12">
+            <button class="my-2 btn btn-info" title="جابجا کردن بدهکار و بستانکار" @click="swap()">
+              {% load static %}
+              <img width="32" src="{% static 'img/icons/exchange3.png' %}" alt="">
+            </button>
+          </div>
           <div class="col-md-12">
             <div class="row">
               <div class="col-6">
