--- a/projectmanager/templates/projectmanager/includes/add-invoice-app/template.html
+++ b/projectmanager/templates/projectmanager/includes/add-invoice-app/template.html
@@ -21,183 +21,197 @@
       data-parent="#accordion-add-invoice"
     >
       <div class="card-body">
-      
-          <div class="row">
-            <div class="col-md-12">
-              <div class="form-group">
-                <label for="">عنوان</label>
-                <input v-model="title" type="text" class="form-control" />
-              </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <label for="">عنوان</label>
+              <input v-model="title" type="text" class="form-control" />
             </div>
+          </div>
 
-            <div class="col-md-12">
-              <div class="row">
-                <div class="col-6">
-                  <div class="form-group">
-                    <label for="bedehkar_code">بدهکار</label>
+          <div class="col-md-12">
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="bedehkar_code">بدهکار</label>
                   <button class="btn btn-info btn-sm" @click="paste_bedehkar()">
                     <i class="fa fa-paste"></i>
                   </button>
-                    <input
-                      type="text"
-                      placeholder=""
-                      class="form-control"
-                      id="bedehkar_code"
-                      @input="select_bedehkar()"
-                      v-model="bedehkar_code"
-                    />
-                  </div>
+                  <input
+                    type="text"
+                    placeholder=""
+                    class="form-control"
+                    id="bedehkar_code"
+                    @input="select_bedehkar()"
+                    v-model="bedehkar_code"
+                  />
                 </div>
+              </div>
 
-                <div class="col-6 mt-3">
-                  <hr />
-                  <a :href="bedehkar.get_absolute_url" v-if="bedehkar">
-                    <div class="media">
-                      <img :src="bedehkar.thumbnail" width="64" alt="" />
-                      <div class="mr-2 media-body">
-                        <h5 class="my-2">
-                          <span
-                            :class="'text-'+bedehkar.color"
-                            v-text="bedehkar.name"
-                          ></span>
-                        </h5>
-                        <h6>
-                          <span
-                            :class="'text-'+bedehkar.color"
-                            v-text="bedehkar.code"
-                          ></span>
-                        </h6>
+              <div class="col-6 mt-3">
+                <hr />
+                <a :href="bedehkar.get_absolute_url" v-if="bedehkar">
+                  <div class="media">
+                    <img :src="bedehkar.thumbnail" width="64" alt="" />
+                    <div class="mr-2 media-body">
+                      <h5 class="my-2">
+                        <span
+                          :class="'text-'+bedehkar.color"
+                          v-text="bedehkar.name"
+                        ></span>
+                      </h5>
+                      <h6>
+                        <span
+                          :class="'text-'+bedehkar.color"
+                          v-text="bedehkar.code"
+                        ></span>
+                      </h6>
 
-                        <h6>
-                          <span
-                            v-html="to_price_colored(bedehkar.balance)"
-                          ></span>
-                        </h6>
+                      <h6>
+                        <span
+                          v-html="to_price_colored(bedehkar.balance)"
+                        ></span>
+                      </h6>
 
-                        <h6>
-                          <small
-                            :class="'text-'+bedehkar.color"
-                            v-text="bedehkar.full_name"
-                          ></small>
-                        </h6>
-                      </div>
+                      <h6>
+                        <small
+                          :class="'text-'+bedehkar.color"
+                          v-text="bedehkar.full_name"
+                        ></small>
+                      </h6>
                     </div>
-                  </a>
-                  <div v-if="!bedehkar">
-                    <h5 class="text-danger">بدهکار انتخاب نشده است.</h5>
                   </div>
+                </a>
+                <div v-if="!bedehkar">
+                  <h5 class="text-danger">بدهکار انتخاب نشده است.</h5>
                 </div>
               </div>
             </div>
-            <div class="col-md-12">
-              <button class="my-2 btn btn-info" title="جابجا کردن بدهکار و بستانکار" @click="swap()">
-                {% load static %}
-                <img width="32" src="{% static 'img/icons/exchange3.png' %}" alt="">
-              </button>
-            </div>
-            <div class="col-md-12">
-              <div class="row">
-                <div class="col-6">
-                  <div class="form-group">
-                    <label for="bestankar_code">بستانکار</label>
-                  <button class="btn btn-info btn-sm" @click="paste_bestankar()">
+          </div>
+          <div class="col-md-12">
+            <button
+              class="my-2 btn btn-info"
+              title="جابجا کردن بدهکار و بستانکار"
+              @click="swap()"
+            >
+              {% load static %}
+              <img
+                width="32"
+                src="{% static 'img/icons/exchange3.png' %}"
+                alt=""
+              />
+            </button>
+          </div>
+          <div class="col-md-12">
+            <div class="row">
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="bestankar_code">بستانکار</label>
+                  <button
+                    class="btn btn-info btn-sm"
+                    @click="paste_bestankar()"
+                  >
                     <i class="fa fa-paste"></i>
                   </button>
 
-                    <input
-                      type="text"
-                      placeholder=""
-                      class="form-control"
-                      id="bestankar_code"
-                      @input="select_bestankar()"
-                      v-model="bestankar_code"
-                    />
-                  </div>
+                  <input
+                    type="text"
+                    placeholder=""
+                    class="form-control"
+                    id="bestankar_code"
+                    @input="select_bestankar()"
+                    v-model="bestankar_code"
+                  />
                 </div>
-                <div class="col-6 mt-3">
-                  <hr />
-                  <a :href="bestankar.get_absolute_url" v-if="bestankar">
-                    <div class="media">
-                      <img :src="bestankar.thumbnail" width="64" alt="" />
-                      <div class="mr-2 media-body">
-                        <h5 class="my-2">
-                          <span
-                            :class="'text-'+bestankar.color"
-                            v-text="bestankar.name"
-                          ></span>
-                        </h5>
-                        <h6>
-                          <span
-                            :class="'text-'+bestankar.color"
-                            v-text="bestankar.code"
-                          ></span>
-                        </h6>
-                        <h6>
-                          <span
-                            v-html="to_price_colored(bestankar.balance)"
-                          ></span>
-                        </h6>
+              </div>
+              <div class="col-6 mt-3">
+                <hr />
+                <a :href="bestankar.get_absolute_url" v-if="bestankar">
+                  <div class="media">
+                    <img :src="bestankar.thumbnail" width="64" alt="" />
+                    <div class="mr-2 media-body">
+                      <h5 class="my-2">
+                        <span
+                          :class="'text-'+bestankar.color"
+                          v-text="bestankar.name"
+                        ></span>
+                      </h5>
+                      <h6>
+                        <span
+                          :class="'text-'+bestankar.color"
+                          v-text="bestankar.code"
+                        ></span>
+                      </h6>
+                      <h6>
+                        <span
+                          v-html="to_price_colored(bestankar.balance)"
+                        ></span>
+                      </h6>
 
-                        <h6>
-                          <small
-                            :class="'text-'+bestankar.color"
-                            v-text="bestankar.full_name"
-                          ></small>
-                        </h6>
-                      </div>
+                      <h6>
+                        <small
+                          :class="'text-'+bestankar.color"
+                          v-text="bestankar.full_name"
+                        ></small>
+                      </h6>
                     </div>
-                  </a>
-                  <div v-if="!bestankar">
-                    <h5 class="text-danger">بستانکار انتخاب نشده است.</h5>
                   </div>
+                </a>
+                <div v-if="!bestankar">
+                  <h5 class="text-danger">بستانکار انتخاب نشده است.</h5>
                 </div>
               </div>
             </div>
+          </div>
 
-            <div class="col-md-4">
-              <div class="form-group">
-                <label for="exampleInputDate">تاریخ</label>
-                <date-picker v-model="event_date"></date-picker>
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="exampleInputDate">تاریخ</label>
+              <date-picker v-model="event_date"></date-picker>
 
-                <input
-                  type="text"
-                  required
-                  class="form-control"
-                  v-model="event_date"
-                />
-              </div>
+              <input
+                type="text"
+                required
+                class="form-control"
+                v-model="event_date"
+              />
             </div>
+          </div>
 
-            <div class="col-md-4">
-              <div class="form-group">
-                <label for="exampleInputDate">زمان</label>
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="exampleInputDate">زمان</label>
 
-                <input
-                  type="text"
-                  required
-                  class="form-control"
-                  v-model="event_time"
-                />
-              </div>
+              <input
+                type="text"
+                required
+                class="form-control"
+                v-model="event_time"
+              />
             </div>
+          </div>
 
-            <div class="col-md-4"></div>
+          <div class="col-md-4"></div>
 
-            <div class="col-md-12">
-              <div v-if="message.show">
+          <div class="col-md-12">
+            <div v-if="message.show">
               <div :class="'my-2 alert alert-'+message.color">
                 <h5 v-text="message.title"></h5>
                 <div v-html="message.body"></div>
               </div>
             </div>
 
-              <button class="btn btn-success" @click="add_invoice()" v-if="!waiting" type="submit">
-                <i class="fa fa-plus"></i>
-                افزودن
-              </button>
-            </div>
+            <button
+              class="btn btn-success"
+              @click="add_invoice()"
+              v-if="!waiting"
+              type="submit"
+            >
+              <i class="fa fa-plus"></i>
+              افزودن
+            </button>
           </div>
-         
+        </div>
       </div>
     </div>
   </div>
