--- a/projectmanager/templates/projectmanager/includes/add-project-app/template.html
+++ b/projectmanager/templates/projectmanager/includes/add-project-app/template.html
@@ -138,13 +138,22 @@
               <div class="form-group">
                 <label for="exampleInputDate">&nbsp;</label>
 
-                <a href="{% url 'organization:organization_units' %}" target="_blank"
+                <a
+                  href="{% url 'organization:organization_units' %}"
+                  target="_blank"
                   >لیست سازمان ها</a
                 >
               </div>
             </div>
 
             <div class="col-md-12">
+              <div v-if="message.show">
+                <div :class="'my-2 alert alert-'+message.color">
+                  <h5 v-text="message.title"></h5>
+                  <div v-html="message.body"></div>
+                </div>
+              </div>
+
               <button class="btn btn-success" type="submit">
                 <i class="fa fa-plus"></i>
                 افزودن
