change person category  app OK

--- a/accounting/templates/accounting/includes/add-person-account-app/script.html
+++ b/accounting/templates/accounting/includes/add-person-account-app/script.html
@@ -6,7 +6,7 @@
     let person_category_id=0
     // const colors_for_add_account_app = JSON.parse("{a{colors_s|escapejs}}")
 </script>
-{% if person %}
+{% if person_s %}
   <script>
     person=JSON.parse("{{person_s|escapejs}}")
     person_id=person.id
