--- a/accounting/templates/accounting/person-category.html
+++ b/accounting/templates/accounting/person-category.html
@@ -1,57 +1,39 @@
 {% extends "accounting/layout.html" %} {% block content %}
 <div class="row rtl farsi">
-  <div class="col-md-4">
-    <div class="card">
-        <div class="card-header">
-            <h6>
-                دسته بندی اشخاص
-            </h6>
-        </div>
-      <div class="card-body">
-        <h5>{{person_category}}</h5>
-        <div>
-          {% if perms.accouting.change_personcategory %}
-
-          <a
-            target="_blank"
-            href="{{person_category.get_edit_url}}"
-            title="ویرایش"
-            class="text-warning mx-2"
-          >
-            <i class="fa fa-edit text-warning"> </i>
-            ویرایش
-          </a>
-          {% endif %} {% if perms.accouting.delete_personcategory %}
-
-          <a
-            target="_blank"
-            href="{{person_category.get_delete_url}}"
-            title="حذف"
-            class="text-danger mx-2"
-          >
-            <i class="fa fa-trash text-danger"> </i>
-            حذف
-          </a>
-          {% endif %}
-        </div>
-      </div>
-    </div>
+  <div class="col-md-6">
+  
+    {% include "accounting/includes/person-category-app/card.html" %}
   </div>
 
-{% if add_person_account_form %}
+  {% if edit_person_category_form %}
+  <div class="col-md-6">
+    {% include "accounting/includes/edit-person-category-app/template.html" %}
+  </div>
+  {% endif %}
   
+  {% if add_person_account_form %}
 
-<div class="col-md-12">
-  {% include 'accounting/includes/add-person-account-app/template.html' %}
-</div>
-{% endif %}
+  <div class="col-md-12">
+    {% include 'accounting/includes/add-person-account-app/template.html' %}
+  </div>
+  {% endif %}
+
+
   <div class="col-md-12">
     {% include 'accounting/includes/person-accounts-app/template.html' %}
   </div>
-
 </div>
-{% endblock content %} {% block script %} 
+{% endblock content %}
+{% block script %}
 {% if add_person_account_form %}
-  {% include 'accounting/includes/add-person-account-app/script.html' %}
+        {% include 'accounting/includes/add-person-account-app/script.html' %}
 {% endif %}
-{% include 'accounting/includes/person-accounts-app/script.html' %} {% endblock script %}
+
+
+{% if edit_person_category_form %}
+          
+      {% include "accounting/includes/edit-person-category-app/script.html" %} 
+{% endif %}
+
+{% include 'accounting/includes/person-accounts-app/script.html' %} 
+{% endblock script %}
