--- a/projectmanager/templates/projectmanager/index.html
+++ b/projectmanager/templates/projectmanager/index.html
@@ -14,6 +14,22 @@
       <h6 class="text-center">پروژه ها</h6>
     </a>
   </div>
+
+
+
+
+   <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+    <a href="{% url 'projectmanager:remote_clients' %}">
+      <img
+        src="{% static 'chef/img/logo.png' %}"
+        width="64em"
+        class="mb-2"
+        alt=""
+      />
+      <h6 class="text-center">کلاینت ها</h6>
+    </a>
+  </div>
+
    
 </div>
 {% endblock content %}
