--- a/projectmanager/templates/projectmanager/remote-client.html
+++ b/projectmanager/templates/projectmanager/remote-client.html
@@ -46,12 +46,7 @@
                             project
                         </td>
                         <td class="client-param-value">
-                            <a href="{{project.get_absolute_url}}">
-                                <h5 class="mb-3  ltr text-left">
-
-                                    {{project.title}}
-                                </h5>
-                            </a>
+                            <div class="rtl my-2">{{project.get_breadcrumb|safe}}</div>
                         </td>
                     </tr>
 
