--- a/blog/templates/blog/includes/blogs-app/script.html
+++ b/blog/templates/blog/includes/blogs-app/script.html
@@ -1,14 +1,30 @@
 <script>
-    
-    let blogs_for_blogs_app=JSON.parse("{{blogs_s|escapejs}}")
+    let blogs = []
     let blogs_app = new Vue({
         el: "#blogs-app",
         data: {
-            blogs: blogs_for_blogs_app
+            blogs: blogs,
+            title: "",
+            waiting: false,
         },
         methods: {
-            to_price: function(vall) { 
-                return  to_price(vall) 
+            add_blog: function () {
+                blogs_app.waiting = true
+                let url = "{% url 'blog:add_blog' %}"
+                let payload = {
+                    csrfmiddlewaretoken: csrfmiddlewaretoken,
+                    title: this.title,
+                    for_home: true,
+                }
+                let posting = $.post(url, payload)
+                posting.done((data) => {
+                    blogs_app.waiting = false
+                    if (data.result === 'SUCCEED') {
+
+                        blogs_app.blogs.push(data.blog)
+                        blogs_app.title = ""
+                    }
+                })
             }
         }
     })
