--- a/blog/templates/blog/includes/blogs-app/template.html
+++ b/blog/templates/blog/includes/blogs-app/template.html
@@ -1,71 +1,104 @@
-<div id="accordion-blogs" class="rtl text-right farsi">
-  <div class="card" id="blogs-app">
-    <div class="card-header">
-      <h5 class="text-center">
-        <button
-          class="btn btn-link"
-          data-toggle="collapse"
-          data-target="#collapse-blogs"
-          aria-expanded="true"
-          aria-controls="collapse-blogs"
-        >
-          بلاگ ها
-          <span v-if="blogs.length>0">
-            <small class="text-danger mx-2">
-              <span v-text="blogs.length"></span>
-            </small>
-          </span>
-        </button>
-      </h5>
-    </div>
+<div class="cd-section" id="blogs">
+    <!--     *********     BLOGS 2      *********      -->
+    <div class="blogs-2" id="blogs-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 ml-auto mr-auto">
+                    <h2 class="title text-center">
+                        {{blog_title_param.value}}
+                        {% if perms.core.change_parameter %}
+                        {{blog_title_param.get_edit_btn|safe}}
 
-    <div
-      id="collapse-blogs"
-      class="collapse {% if expand_blogs %} show {% endif %}"
-      aria-labelledby="heading-blogs"
-      data-parent="#accordion-blogs"
-    >
-      <div class="card-body">
-        <div class="table-responsive">
-          <table class="table table-striped">
-            <thead>
-              <th>بلاگ</th>
-              <th>
+                        {% endif %}
+                    </h2>
+                    <br>
+                    <div class="row" >
 
-              </th>
-            </thead>
-            <tbody>
-              <tr v-for="blog in blogs">
-                <td>
-                  <a :href="blog.get_absolute_url">
-                    <span v-text="blog.title"></span>
-                  </a>
-                </td>
-                <td>
-                  <a
-                    target="_blank"
-                    :href="blog.get_edit_url"
-                    title="ویرایش"
-                    class="text-warning mx-2"
-                  >
-                    <i class="fa fa-edit text-warning"> </i>
-                    ویرایش
-                  </a>
-                  <a
-                    target="_blank"
-                    :href="blog.get_delete_url"
-                    title="حذف"
-                    class="text-danger mx-2"
-                  >
-                    <i class="fa fa-trash text-danger"> </i>
-                    حذف
-                  </a>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+                        {% for blog in blogs %}
+
+                        <div class="col-md-4">
+                            <div class="card card-plain card-blog">
+                                <div class="card-header card-header-image">
+                                    <a href="{{blog.get_absolute_url}}">
+                                        <img class="img img-raised" src="{{blog.thumbnail}}">
+                                    </a>
+                                </div>
+                                <div class="card-body">
+                                    <h6 class="card-category text-info">
+                                        {% if blog.sub_title %}
+
+                                        {{blog.sub_title}}
+                                        {% endif %}
+                                    </h6>
+                                    <h4 class="card-title farsi text-right">
+                                        <a href="{{blog.get_absolute_url}}">
+                                            {{blog.title}}
+                                        </a>
+                                    </h4>
+                                   
+                                    <p class="text-right farsi">
+                                        <a href="{{blog.get_absolute_url}}">
+                                            <span class="farsi">
+
+                                                ادامه مطلب
+                                            </span>
+                                            <i class="material-icons">reply</i>
+                                        </a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+
+
+
+                    </div>
+                    <div class="row" id="blogs-app">
+
+
+                        <div class="col-md-4" v-for="blog in blogs">
+                            <div class="card card-plain card-blog">
+                                <div class="card-header card-header-image">
+                                    <a :href="blog.get_absolute_url">
+                                        <img class="img img-raised" :src="blog.thumbnail">
+                                    </a>
+                                </div>
+                                <div class="card-body">
+                                    <h6 class="card-category text-info" v-text="blog.sub_title">
+
+                                    </h6>
+                                    <h4 class="card-title farsi text-right">
+                                        <a :href="blog.get_absolute_url" v-text="blog.title">
+                                        </a>
+                                    </h4>
+                                    
+                                    <p>
+                                        <a :href="blog.get_absolute_url">
+                                            <span class="farsi">
+                                                
+                                                ادامه مطلب
+                                            </span>
+                                            <i class="material-icons">reply</i>
+                                        </a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        {% if perms.blog.add_blog %}
+                        <div class="col-md-4">
+
+                            {% include "blog/includes/blogs-app/add-blog-form.html" %}
+                        </div>
+
+                        {% endif %}
+
+
+
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
+    <!--     *********    END BLOGS 2      *********      -->
 </div>
