--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -3,15 +3,18 @@
 {% block content %}
 <div class="row rtl farsi">
     {% for phoenix_app in phoenix_apps %}
+    {% if phoenix_app.on_index %}
+      
     <div class="col-4 col-md-3 col-lg-2 text-center my-3">
         <a href="{{phoenix_app.url}}">
             <img src="{{phoenix_app.logo}}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
-
+                
                 {{phoenix_app.title}}
             </h6>
         </a>
     </div>
+    {% endif %}
     {% endfor %}
  
 
