--- a/school/templates/school/includes/students-app/template.html
+++ b/school/templates/school/includes/students-app/template.html
@@ -9,7 +9,7 @@
           aria-expanded="true"
           aria-controls="collapse-students"
         >
-        دانش آموزان
+          دانش آموزان
           <span v-if="students.length>0">
             <small class="text-danger mx-2">
               <span v-text="students.length"></span>
@@ -29,30 +29,29 @@
         <div class="table-responsive">
           <table class="table table-striped">
             <thead>
-               
               <th>دانش آموز</th>
-              
- 
+
+              <th>
+                حساب
+              </th>
               <th>
 
               </th>
             </thead>
             <tbody>
               <tr v-for="student in students">
-                
                 <td>
                   <a :href="student.get_absolute_url">
-                    <span v-text="student.person.full_name"></span>
+                    <span v-text="student.person_account.person.full_name"></span>
                   </a>
-
-                  
-
- 
                 </td>
-
-                
-                
+                 <td>
+                  <div v-for="person_account in [student.person_account]">
+                    {% include "accounting/includes/person-account-app/media.html" %}
+                  </div>
+                </td>
                 <td>
+                  {% if perms.school.change_student %}
                   <a
                     target="_blank"
                     :href="student.get_edit_url"
@@ -62,6 +61,8 @@
                     <i class="fa fa-edit text-warning"> </i>
                     ویرایش
                   </a>
+                  {% endif %} {% if perms.school.delete_student %}
+
                   <a
                     target="_blank"
                     :href="student.get_delete_url"
@@ -71,6 +72,7 @@
                     <i class="fa fa-trash text-danger"> </i>
                     حذف
                   </a>
+                  {% endif %}
                 </td>
               </tr>
             </tbody>
